<resources>
    <string name="app_name">MyShopApp</string>
    <string name="my_shop_app">My Shop App</string>
    <string name="content_description">content_description</string>
    <string name="title_login">Login</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password</string>

    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm Password does not Match</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>
    <string name="registery_successfull">Thanks for registering!</string>

    <string name="please_wait">Please Wait&#8230;</string>
    <string name="login_successfull">Login Successful !</string>
    <string name="tv_forgot_pass">Forgot Password</string>

    <string name="tv_details_fp">Enter your username and e-mail address we\'ll send you a email to reset your password;</string>


    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">Link successfully sent to email</string>
    <string name="registery_succes">You are registered successfully.</string>
    <string name="read_storage_permission_denied">Oops , you just denied the permission for storage. You can also allow it from settings. </string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>


    <string name="msg_profile_update_success">Your profile is updated successfully</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="please_click_back_again_to_exit">Please Click back to exit</string>
    <string name="title_product">Products</string>
    <string name="title_order">Orders</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="title_complete_profle">Complete Profile</string>
    <string name="title_edit_profle">Edit Profile</string>
</resources>