<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgotActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        android:id="@+id/fl_header_image">

        <ImageView
            android:src="@drawable/login_top_bg"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.nst.myshopapp.utils.MSPTextViewBold
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="My Shop App"
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_header_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <androidx.appcompat.widget.Toolbar
            android:gravity="top"
            android:id="@+id/toolbar_forgotpassword_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>


    </FrameLayout>

    <com.nst.myshopapp.utils.MSPTextViewBold
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.nst.myshopapp.utils.MSPTextviewRegular
        android:textAlignment="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/tv_details_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.nst.myshopapp.utils.MSPEditText
        android:layout_margin="20dp"
        android:hint="Email"
        android:textSize="@dimen/et_textSize"
        android:id="@+id/et_email"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/et_padding"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.nst.myshopapp.utils.MSPButton
        android:paddingBottom="@dimen/btn_padding"
        android:paddingTop="@dimen/btn_padding"
        android:textSize="@dimen/btn_textSize"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:id="@+id/btn_submit"
        android:text="@string/btn_lbl_submit"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>